[gd_scene load_steps=8 format=2]

[ext_resource path="res://avocadoplaceholder.png" type="Texture" id=1]
[ext_resource path="res://wholeavocado.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 1280, 1280 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 81.0
height = 76.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 96.0
height = 54.0

[sub_resource type="CircleShape2D" id=5]
radius = 686.353

[node name="wholeavocado" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.197949, 0.197949 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hitboxarea" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="hitboxarea"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="alertarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="alertarea"]
position = Vector2( -1, 3 )
shape = SubResource( 5 )

[connection signal="area_entered" from="hitboxarea" to="." method="_on_hitboxarea_area_entered"]
[connection signal="body_entered" from="hitboxarea" to="." method="_on_hitboxarea_body_entered"]
[connection signal="area_entered" from="alertarea" to="." method="_on_alertarea_area_entered"]
